# rust-mbedtls

./: .gitignore  .gitmodules  .travis.yml  3.X-migration-guide.md  Cargo.toml  LICENSE-GPL  README.md  aarch64-linux-musl-cross.tgz.sha1sum  bors.toml  ci.sh  ci_local.sh  ci_tools.sh  ct.sh  ct_locally.sh  includegen.sh  multithread_test.sh  multithread_test_c.sh  reproduce.md  rustfmt.toml  upgrade_vendor.sh  wine.sh
.config/: nextest.toml
.github/workflows/: publish-crates.yml  test.yml
mbedtls/: COPYING  Cargo.toml  build.rs  valgrind_unittests.sh
mbedtls-platform-support/: Cargo.toml  build.rs
mbedtls-platform-support/src/: lib.rs  psa_external_rng.rs  rust_printf.c  self_test.rs  threading.rs
mbedtls-selftest/: Cargo.toml  build.rs
mbedtls-sys/: .gitignore  COPYING-APACHE  COPYING-GPL  Cargo.toml  README.md
mbedtls-sys/src/: lib.rs  types.rs
mbedtls-sys/vendor-patches/: 0001-Vendor-Change.patch  0002-Adding-mpi_force_c_code-feature.patch  0003-fix-MBEDTLS_PRINTF_xxx-for-mingw.patch  custom_has_aesni.patch  mpi_force_c_code.patch
mbedtls/benches/: bench.rs  cipher.rs  ecp_eq_test.rs
mbedtls/examples/: client.rs  client_dtls.rs  client_psk.rs  server.rs
mbedtls/examples/internal/: bench.rs
mbedtls/src/: alloc.rs  error.rs  lib.rs  mbedtls_malloc.c  private.rs  rust_printf.c  self_test.rs  threading.rs  wrapper_macros.rs
mbedtls/src/bignum/: mod.rs
mbedtls/src/cipher/: mod.rs
mbedtls/src/cipher/raw/: mod.rs  serde.rs
mbedtls/src/dsa/: mod.rs
mbedtls/src/ecp/: mod.rs
mbedtls/src/hash/: mod.rs
mbedtls/src/no_std/: alloc.rs  mod.rs  self_test.rs  snprintf.c  string.c  strstr.c
mbedtls/src/pk/: dhparam.rs  ec.rs  mod.rs  rfc6979.rs
mbedtls/src/pk/dsa/: mod.rs
mbedtls/src/pkcs12/: mod.rs
mbedtls/src/rng/: ctr_drbg.rs  hmac_drbg.rs  mod.rs  os_entropy.rs  rdrand.rs
mbedtls/src/ssl/: algorithms.rs  async_io.rs  async_session.rs  async_utils.rs  ciphersuites.rs  config.rs  context.rs  cookie.rs  io.rs  mod.rs  ssl_states.rs  ticket.rs
mbedtls/src/x509/: certificate.rs  crl.rs  csr.rs  mod.rs  profile.rs
mbedtls/tests/: alpn.rs  async_session.rs  bignum.rs  cert.rs  client_server.rs  ec.rs  ecp.rs  error_ops.rs  hkdf.rs  hyper.rs  hyper13.rs  hyper_async.rs  mbedtls_self_tests.rs  pbkdf.rs  rsa.rs  save_restore.rs  ssl_conf_ca_cb.rs  ssl_conf_psk.rs  ssl_conf_psk_cb.rs  ssl_conf_verify.rs  stringtest.c  x509.rs
mbedtls/tests/data/: certificate.crt  chain-leaf.crt  dsa.kat  pbes2-AES-128-CBC.p12  pbes2-AES-192-CBC.p12  pbes2-AES-256-CBC.p12  pbes2-DES-EDE3-CBC.p12  root.crt  root.empty.crl  root.revoked.crl
mbedtls/tests/support/: debug.rs  entropy.rs  keys.rs  mod.rs  net.rs  rand.rs  write_all.rs
mbedtls/tests/support/keys/: ca.crt  ca.key  ca.srl  user.crt  user.key
