[package]
name = "mbedtls-platform-support"
version = "0.1.1"
authors = ["Yuxiang Cao <yuxiang.cao@fortanix.com>"]
build = "build.rs"
edition = "2018"
license = "Apache-2.0 OR GPL-2.0-or-later"
description = """
This Rust crate is a support library for the `mbedtls` crate, providing platform and target specific
implementations of all necessary functions. By separating this logic into a separate crate, multiple
versions of the mbedtls crate can coexist within a single crate.This helps to avoid link name conflict
errors. The crate exports Rust functions and defines C functions to support external overrides as
needed for custom implementation under various platforms or targets.
"""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls-platform-support/"
keywords = ["MbedTLS", "mbed", "TLS", "SSL", "cryptography"]
links = "mbedtls-platform-support"

[dependencies]
cfg-if = "1.0.0"
spin = { version = "0.5.2", default-features = false, optional = true }
chrono = { version = "0.4", optional = true }

[target.x86_64-fortanix-unknown-sgx.dependencies]
chrono = "0.4"

[dependencies.mbedtls-sys-auto]
version = "2.25.0"
default-features = false
features = ["threading", "custom_printf"]
path = "../mbedtls-sys"

[build-dependencies]
cc = "1.0"

[features]
time = ["mbedtls-sys-auto/time"]
std = ["mbedtls-sys-auto/std"]
spin_threading = ["spin", "mbedtls-sys-auto/custom_threading"]
rust_threading = ["mbedtls-sys-auto/custom_threading", "std"]
custom_gmtime_r = ["mbedtls-sys-auto/custom_gmtime_r", "chrono"]
custom_time = ["mbedtls-sys-auto/custom_time", "chrono"]
force_aesni_support = ["mbedtls-sys-auto/custom_has_support","mbedtls-sys-auto/aes_alt", "aesni"]
aesni = ["mbedtls-sys-auto/aesni"]
