[package]
name = "mbedtls-selftest"
version = "0.1.0"
authors = ["Yuxiang Cao <yuxiang.cao@fortanix.com>"]
build = "build.rs"
edition = "2018"
license = "Apache-2.0/GPL-2.0+"
description = """
This Rust crate is a support library for the `mbedtls` crate. It contains self-test
logic that exports Rust functions and defines C functions. By separating this logic
into a separate crate, multiple versions of the `mbedtls` crate can coexist within a
single crate. This helps to avoid link name conflict errors.
"""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls-selftest/"
keywords = ["MbedTLS", "mbed", "TLS", "SSL", "cryptography"]
links = "mbedtls-selftest-support"

[dependencies.mbedtls-sys-auto]
version = "2.25.0"
default-features = false
features = ["custom_printf"]
path = "../mbedtls-sys"

[build-dependencies]
cc = "1.0"

[dependencies]
cfg-if = "1.0.0"

[features]
std = ["mbedtls-sys-auto/std"]
