[package]
name = "mbedtls-sys-auto"
version = "3.5.0-alpha.3+0b3de6f"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
build = "build/build.rs"
license = "Apache-2.0 OR GPL-2.0-or-later"
description = """
Rust bindings for MbedTLS.

This version generates the correct bindings at compile time using bindgen."""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls-sys-auto/"
links = "mbedtls"

[lib]
name = "mbedtls_sys"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.0" }

[target.'cfg(windows)'.dependencies]
libc = { version = "0.2.0" }

[build-dependencies]
bindgen = { version = "0.65.1", features = ["experimental"] }
cmake = "0.1.17"
cc = "1.0.45"
lazy_static = "1.4"
syn = { version = "1.0.64", features = ["full", "visit"] }
quote = "1.0.9"

[features]
# If you use mbedtls-sys in a no_std configuration, you need to provide your
# own versions of the following functions:
#
# * calloc/free
# * strstr/strlen/strncpy/strncmp/strcmp/snprintf
# * memmove/memcpy/memcmp/memset
# * rand/printf (used only for self tests. optionally use custom_printf)
default = ["std", "debug", "threading", "time", "aesni", "padlock"]
std = []
debug = []
custom_printf = []
custom_has_support = []
aes_alt = []
threading = []
time = []
havege = ["time"]
aesni = []
padlock = []
mpi_force_c_code = []
trusted_cert_callback = []
tls13 = []
