[package]
name = "mbedtls-sys-auto"
version = "2.28.12"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
build = "build/build.rs"
license = "Apache-2.0 OR GPL-2.0-or-later"
description = """
Rust bindings for MbedTLS.

This version generates the correct bindings at compile time using bindgen."""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls-sys-auto/"
links = "mbedtls"

[package.metadata.mbedtls]
git = "https://github.com/Mbed-TLS/mbedtls.git"
version = "2.28.10"
rev = "2fc8413bfcb51354c8e679141b17b3f1a5942561"

[lib]
name = "mbedtls_sys"

[dependencies]
cfg-if = "1.0.0"
libz-sys = { version = "1.0.0", optional = true }
# deprecated dependency, this don't do anything anymore, but still needed to
# provide the `libc` feature, can be removed on major version bump
libc = { version = "0.2.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.0" }

[target.'cfg(windows)'.dependencies]
libc = { version = "0.2.0" }

[build-dependencies]
bindgen = { version = "0.65.1" }
cmake = "0.1.17"
cc = "1.0.45"
lazy_static = "1.4"
syn = { version = "1.0.64", features = ["full", "visit"] }
quote = "1.0.9"

[features]
# If you use mbedtls-sys in a no_std configuration, you need to provide your
# own versions of the following functions:
#
# * calloc/free
# * strstr/strlen/strncpy/strncmp/strcmp/snprintf
# * memmove/memcpy/memcmp/memset
# * rand/printf (used only for self tests. optionally use custom_printf)
default = ["std", "debug", "threading", "zlib", "time", "aesni", "padlock", "legacy_protocols"]
std = ["debug"] # deprecated automatic enabling of debug, can be removed on major version bump
debug = []
custom_printf = []
custom_has_support = []
aes_alt = []
threading = []
time = []
havege = ["time"]
zlib = ["libz-sys"]
pkcs11 = []
aesni = []
padlock = []
legacy_protocols = []
mpi_force_c_code = []
trusted_cert_callback = []
# deprecated, needed for backcompat, can be removed on major version bump
custom_threading = ["threading"]
custom_time = ["time"]
custom_gmtime_r = ["time"]
# deprecated features, these don't do anything anymore, can be removed on major version bump
pthread = ["threading"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(std_component, values("fs"))',
    'cfg(threading_component, values("pthread"))',
    'cfg(time_component, values("custom", "libc"))',
] }
