[package]
name = "mbedtls"
version = "0.10.0"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
build = "build.rs"
edition = "2018"
license = "Apache-2.0 OR GPL-2.0-or-later"
description = """
Idiomatic Rust wrapper for MbedTLS, allowing you to use MbedTLS with only safe
code while being able to use such great Rust features like error handling and
closures.

Building on MbedTLS's focus on embedded use, this crate can be used in a no_std
environment."""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls/"
keywords = ["MbedTLS","mbed","TLS","SSL","cryptography"]

[dependencies]
bitflags = "1"
serde = { version = "1.0.7", default-features = false, features = ["alloc"] }
serde_derive = "1.0.7"
byteorder = { version = "1.0.0", default-features = false }
yasna = { version = "0.2", optional = true, features = ["num-bigint", "bit-vec"] }
num-bigint = { version = "0.2", optional = true }
bit-vec = { version = "0.5", optional = true }
cfg-if = "1.0.0"
tokio = { version = "1.16.1", optional = true }
once_cell = "1.17.1"

[target.x86_64-fortanix-unknown-sgx.dependencies]
rs-libc = "0.2.0"

[dependencies.mbedtls-sys-auto]
version = "3.4.0"
default-features = false
features = ["trusted_cert_callback", "threading"]
path = "../mbedtls-sys"

[dependencies.mbedtls-platform-support]
version = "0.2"
path = "../mbedtls-platform-support"

[dev-dependencies]
libc = "0.2.0"
rand = "0.4.0"
serde_cbor = "0.6"
hex = "0.3"
hyper = { version = "0.10.16", default-features = false }
async-stream = "0.3.0"
futures = "0.3"
tracing = "0.1"
pin-project-lite = "0.2"
rstest = "0.17.0"
lazy_static = "1.4"
env_logger = "0.10"

[build-dependencies]
cc = "1.0"

[features]
# Features are documented in the README
default = ["std", "aesni", "time", "padlock"]
std = ["byteorder/std", "mbedtls-sys-auto/std", "serde/std", "yasna", "mbedtls-platform-support/std"]
debug = ["mbedtls-sys-auto/debug"]
no_std_deps = ["mbedtls-platform-support/spin", "serde/alloc"]
force_aesni_support = ["mbedtls-platform-support/force_aesni_support", "aesni"]
mpi_force_c_code = ["mbedtls-sys-auto/mpi_force_c_code"]
rdrand = []
aesni = ["mbedtls-platform-support/aesni"]
time = ["mbedtls-platform-support/time"]
padlock = ["mbedtls-sys-auto/padlock"]
dsa = ["std", "yasna", "num-bigint", "bit-vec"]
async = ["std", "tokio", "tokio/net", "tokio/io-util", "tokio/macros"]
async-rt = ["async", "tokio/rt", "tokio/sync", "tokio/rt-multi-thread"]

[[example]]
name = "client"
required-features = ["std"]

[[example]]
name = "client_dtls"
required-features = ["std"]

[[example]]
name = "client_psk"
required-features = ["std"]

[[example]]
name = "server"
required-features = ["std"]

[[test]]
name = "client_server"
required-features = ["std"]

[[test]]
name = "ssl_conf_ca_cb"
required-features = ["std"]

[[test]]
name = "ssl_conf_verify"
required-features = ["std"]

[[test]]
name = "hyper"
required-features = ["std"]


[[test]]
name = "async_session"
path = "tests/async_session.rs"
required-features = ["async-rt"]
